--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 <head>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="components/student.js"></script>
     <script type="text/javascript" src="components/sgt.js"></script>
     <script src="script.js"></script>
-    <link rel="stylesheet" type="text/css" href="tests/tests.css">
-    <script type="text/javascript" src="tests/tests.js"></script>
     <meta name="viewport" content="initial-scale=1, user-scalable=no">
 </head>
 <body>
@@ -30,19 +29,31 @@
             <span class="input-group-addon">
                 <span class="glyphicon glyphicon-user"> </span>
             </span>
-            <input type="text" class="form-control form-rounded" name="studentName" id="studentName" placeholder="Student Name">
+            <input type="text" class="form-control form-rounded" name="studentName" id="studentName" placeholder="Student Name" value="">
         </div>
         <div class="form-group input-group col-xs-12 col-lg-12">
             <span class="input-group-addon">
                 <span class="glyphicon glyphicon-list-alt"> </span>
             </span>
-            <input type="text" class="form-control form-rounded" name="course" id="studentCourse" placeholder="Student Course">
+            <input type="text" class="form-control form-rounded" name="course" id="studentCourse" placeholder="Student Course" value="">
         </div>
         <div class="form-group input-group col-xs-12 col-lg-12">
             <span class="input-group-addon">
                 <span class="glyphicon glyphicon-education"> </span>
             </span>
-            <input type="text" class="form-control form-rounded" name="studentGrade" id="studentGrade" placeholder="Student Grade">
+            <input type="text" class="form-control form-rounded" name="studentGrade" id="studentGrade" placeholder="Student Grade" value="">
+        </div>
+        <div class="form-group input-group col-xs-12 col-lg-12">
+            <span class="input-group-addon">
+                <span class="glyphicon glyphicon-bullhorn"> </span>
+            </span>
+            <input type="text" class="form-control form-rounded" name="studentInstructor" id="studentInstructor" placeholder="Instructor" value="">
+        </div>
+        <div class="form-group input-group col-xs-12 col-lg-12">
+            <span class="input-group-addon">
+                <span class="glyphicon glyphicon-bullhorn"> </span>
+            </span>
+            <textarea type="text" class="form-control form-rounded" name="studentNotes" id="studentNotes" placeholder="notes" ></textarea>
         </div>
         <button type="button" class="add btn btn-success" id="addButton">Add</button>
         <button type="button" class="cancel btn btn-default" id="cancelButton">Cancel</button>
@@ -51,9 +62,10 @@
         <table class="student-list col-lg-9">
             <thead>
             <tr>
-                <th class="col-xs-4 col-md-4">Student Name</th>
-                <th class="col-xs-4 col-md-4">Student Course</th>
-                <th class="col-xs-4 col-md-4">Student Grade</th>
+                <th class="col-xs-4 col-md-4">Name</th>
+                <th class="col-xs-4 col-md-4">Course</th>
+                <th class="col-xs-4 col-md-4">Grade</th>
+                <th class="col-xs-4 col-md-4">Added</th>
                 <th class="col-xs-4 col-md-4">Operations</th>
             </tr>
             </thead>
@@ -64,7 +76,12 @@
         </table>
     </div>
 </div>
-
+<div id="modalShadow">
+    <div class="modalContainer">
+        <div id="modalClose">X</div>
+        <div id="modalContent">test</div>
+    </div>
+</div>
 
 
 </body>
